Add url methods for showPriceTimeline api

--- a/app.wxss
+++ b/app.wxss
@@ -8,3 +8,35 @@
   padding: 200rpx 0;
   box-sizing: border-box;
 } 
+page {
+  font-size: 14px;
+  color: #333
+}
+.input{
+  border:1px solid #dadada
+}
+.container{
+  padding:5px
+}
+.table {
+  border:1px solid #dadada;
+  border-right: 0;
+  border-bottom: 0;
+  width: 98%;
+}
+.tr {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.th,.td {
+  padding: 10px;
+  border-bottom: 1px solid #dadada;
+  border-right: 1px solid #dadada;
+  text-align: center;
+  width:100%
+}
+.th {
+  font-weight: 400;
+  background-color: #dadada
+}
