--- a/pages/symbol/symbol.wxml
+++ b/pages/symbol/symbol.wxml
@@ -11,8 +11,8 @@
           <view class="th">Name</view>
         </view>
         <view class="tr" wx:for="{{companies}}">
-          <view class="td">{{item.symbol}}</view>
-          <view class="td">{{item.name}}</view>
+          <view class="td" data-symbol="{{item.symbol}}" bindtap="showPriceTimeline">{{item.symbol}}</view>
+          <view class="td" data-symbol="{{item.symbol}}" bindtap="showPriceTimeline">{{item.name}}</view>
         </view>
     </view>
   </view>
